# for display continuity sake please use 2 spaces instead of tabs

2013-10-14
  * Small improvement in ZoomToSelectedItemsPlugIn : zoom level is
    calculated with a buffer which size depends both on the global
    selection envelope and on individual features size.

2013-10-07 mmichaud <michael.michaud@free.fr>
  * JUMPReader now store Exceptions instead of throwing them immediately
    so that the reading process can continue (as for new DataSource framework)
    WARNING : the change may break external drivers.
    Add a new Dxf driver compatible with the JUMPReader interface change

2013-10-07 mmichaud <michael.michaud@free.fr>
  * can now read all geometries in a shapefile having more shapes in the .shp
    than records in the .dbf

2013-08-20 ede, happy "German Unity Day" update
  * general performance enhancement for Referenced Image loader, loading is as slow as before but scaling, panning etc. should be much faster
  * all Referenced Image readers selectable/visible in OpenFileWizard now
  * reactivating workbench with bigger Referenced Image visible does not freeze workbench anymore
  * should be able to read old image layer datasets (shp,jml etc.) now
  * JAI tiff _and_ xtiff available now
  * "Referenced Image [legacy]" is now called "GeoTIFF plus (JAI)" to be closer to the original name of the loader
  * added GDAL OpenJPEG J2K reader, terribly slow/unstable though

2013-09-28 mmichaud <michael.michaud@free.fr>
  * Go beyond the 2 Gb limitation fo dbf file reading
  * Object attribute type can now be saved to dbf using toString()

2013-08-20 ede
  * enhance image loading support
    - add 2 new readers
        Image (Commons) based on apache commons imaging
        Image (ImageIO) based on jre imageio
    - renamed old reader based on JAI to
        Image (JAI)
    - readers should be able to open archives now and find worldfiles
      in there or in their basefolder
    - readers gather their supported formats now internally, so the file