@@ -1,6 +1,13 @@
 # for display continuity sake please use 2 spaces instead of tabs
 
-2013-10-14
+2013-10-20 mmichaud <michael.michaud@free.fr>
+  * fix a bug in PostGISDSMetadata and DynamicFeatureCollection
+    where some data in the database was never loaded because of
+    the use of ST_Estimated_Extent.
+    Now, some data can be excluded from "zoom on layer", but it
+    will always be seen after a zoom out or a pan.
+
+2013-10-14 mmichaud <michael.michaud@free.fr>
   * Small improvement in ZoomToSelectedItemsPlugIn : zoom level is
     calculated with a buffer which size depends both on the global
     selection envelope and on individual features size.
